--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Afeez's Personal Site</title>
 </head>
 <body>
-    <img src="https://media.licdn.com/dms/image/v2/D5603AQGZiSIN_A6rtg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1713254478864?e=1750896000&v=beta&t=saxqZJUL9KxarLlSwrePn4kn8DDKzG5fzuKfJlosKA0" alt="Profile Picture">
-    <h1>AFEEZ ONABEKUN</h1>
+<table cellspacing="20">
+    <tr>
+        <td><img src="https://media.licdn.com/dms/image/v2/D5603AQGZiSIN_A6rtg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1713254478864?e=1750896000&v=beta&t=saxqZJUL9KxarLlSwrePn4kn8DDKzG5fzuKfJlosKA0" alt="Profile Picture"></td>
+        <td><h1>AFEEZ ONABEKUN</h1>
     <p><strong><a href="https://linktr.ee/afeez.onabekun">Data Analyst | Data Science & Blockchain Expert</a></strong></p>
-    <p><em>I am a data-driven problem solver passionate about transforming raw data into actionable insights that fuel strategic decision-making and drive tangible business results. With a proven track record of 2+ years of hands-on experience and continuous self-learning, I excel in data manipulation, advanced modeling, insightful visualization, and in-depth analysis. I turn data into strategic advantages, delivering impactful results through a comprehensive approach.</em></p>
-
+    <p><em>I am a data-driven problem solver passionate about transforming raw data into actionable insights that fuel strategic decision-making and drive tangible business results. With a proven track record of 2+ years of hands-on experience and continuous self-learning, I excel in data manipulation, advanced modeling, insightful visualization, and in-depth analysis. I turn data into strategic advantages, delivering impactful results through a comprehensive approach.</em></p></td>
+    </tr>
+</table>
     <p>𝗛𝗲𝗿𝗲'𝘀 𝗛𝗼𝘄 𝗜 𝗖𝗮𝗻 𝗖𝗼𝗻𝘁𝗿𝗶𝗯𝘂𝘁𝗲 𝘁𝗼 𝗬𝗼𝘂𝗿 𝗢𝗿𝗴𝗮𝗻𝗶𝘇𝗮𝘁𝗶𝗼𝗻:
         <ul>
         <li>𝗨𝗻𝗰𝗼𝘃𝗲𝗿 𝗛𝗶𝗱𝗱𝗲𝗻 𝗢𝗽𝗽𝗼𝗿𝘁𝘂𝗻𝗶𝘁𝗶𝗲𝘀: Develop advanced data models to identify key trends, patterns, and correlations that can inform strategic growth initiatives and reveal untapped potential.</li>
@@ -20,18 +23,120 @@
             <li>𝗚𝗲𝗻𝗲𝗿𝗮𝘁𝗲 𝗦𝘁𝗿𝗮𝘁𝗲𝗴𝗶𝗰 𝗜𝗻𝘀𝗶𝗴𝗵𝘁𝘀: Uncover key insights from complex datasets to drive strategic understanding, inform planning, and support the achievement of organizational goals.</li>
             <li>𝗦𝘂𝗽𝗽𝗼𝗿𝘁 𝗦𝘁𝗿𝗮𝘁𝗲𝗴𝗶𝗰 𝗣𝗹𝗮𝗻𝗻𝗶𝗻𝗴: Provide data-backed insights and recommendations to inform the development and execution of strategic initiatives, contributing to long-term success.</li>
         </ul>
-    </p>
-
     <p>Eager to connect and leverage my data expertise to solve complex challenges and contribute to your organization's success.</p>
     <hr>
     <h3>Skills and Competence</h3>
-        <ul>
-            <li><strong>Technical Skills:</strong>
-            Python | SQL (PostgreSQL) | Microsoft Power BI | Tableau | Microsoft Excel (Advanced) | Data Visualization | Data Modeling | Statistical Analysis | Hypothesis Testing | Regression Analysis | Time Series Analysis | Web Scraping | Dashboard Creation</li>
-            <li><strong>Soft Skills:</strong>
-            Problem Solving | Analytical Thinking | Attention to Detail | Effective Communication | Collaboration | Time Management | Adaptability | Teamwork | Presentation Skills | Learning Agility</li>
-        </ul>
+    <table cellspacing="15">
+        <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>SQL (PostgreSQL)</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Microsoft Power BI</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Tableau</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Microsoft Excel (Advanced)</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        <tr>
+            <td>Data Visualization</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Data Modeling</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Statistical Analysis</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Hypothesis Testing</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Regression Analysis</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Time Series Analysis</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Web Scraping</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Dashboard Creation</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Problem-Solving</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Analytical Thinking</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Attention to Detail</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Effective Communication</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Collaboration</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Time Management</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Adaptability</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Teamwork</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Presentation Skills</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Learning Agility</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+    </table>
     <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="15">
+        <thead>
+        <th>DATE</th>
+        <th>PLACE</th>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Feb 2024 – Dec 2024</td>
+            <td>Data Analyst Webiz Innovation, Lagos, Nigeria</td>
+        </tr>
+        <tr>
+            <td>Mar 2023 – Oct 2023</td>
+            <td>Data Analysis Intern Utiva, Lagos, Nigeria</td>
+        </tr>
+        </tbody>
+    </table>
     <h2><a href="Key Project.html">Key Project</a></h2>
 </body>
 </html>
